--- a/.github/workflows/pankou.yml
+++ b/.github/workflows/pankou.yml
@@ -1,9 +1,9 @@
 name: Pankou Data Sync
 
 on:
-  schedule:
-    - cron: '20 1 * * 1-5' # 北京时间 09:20
-    - cron: '50 4 * * 1-5'  # 北京时间 12:50
+  #schedule:
+  #  - cron: '20 1 * * 1-5' # 北京时间 09:20
+  #  - cron: '50 4 * * 1-5'  # 北京时间 12:50
   workflow_dispatch:
 
 jobs:
