--- a/.github/workflows/pankou.yml
+++ b/.github/workflows/pankou.yml
@@ -31,6 +31,7 @@ jobs:
       # 第二步：执行仓库里的脚本
       - name: Run scripts
         run: |
+          echo "Current time: $(date +'%Y-%m-%d %H:%M:%S')"
           cd core
           python scripts/pankou.py
 
@@ -42,3 +43,6 @@ jobs:
           git config --global user.email "bot@github.com"
           git add data/*.txt
           git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-sync: $(date +'%Y-%m-%d %H:%M:%S')" && git push)
+          TAG_NAME=$(date +'%Y%m%d')
+          git tag -f "$TAG_NAME"
+          git push origin "$TAG_NAME" --force
