--- a/.github/workflows/raw-history.yml
+++ b/.github/workflows/raw-history.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: hiyishui/stock-grabber
-          token: ${{ secrets.MY_PAT }}
+          token: ${{ secrets.GRABBER_PAT }}
 
       - name: 生成分片矩阵
         id: gen
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: hiyishui/stock-grabber
-          token: ${{ secrets.MY_PAT }}
+          token: ${{ secrets.GRABBER_PAT }}
 
       - name: 设置 Python 环境
         uses: actions/setup-python@v5
