--- a/.github/workflows/batch-pankou.yml
+++ b/.github/workflows/batch-pankou.yml
@@ -3,9 +3,9 @@ permissions:
   contents: write
 
 on:
-  schedule:
-    # 每小时整点执行（UTC），对应北京时间每小时
-    - cron: '0 * * * *'
+  # schedule:
+  #   # 每小时整点执行（UTC），对应北京时间每小时
+  #   - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
       batch_index:
