--- a/.github/workflows/raw-history.yml
+++ b/.github/workflows/raw-history.yml
@@ -13,7 +13,7 @@ on:
         required: false
         type: string
       batch_size:
-        description: '每个 job 处理的股票数量（默认 30）'
+        description: '每个 job 处理的数量（默认 30）'
         required: false
         type: string
         default: '30'
@@ -88,7 +88,7 @@ jobs:
           
           IFS=',' read -ra STOCK_LIST <<< "$SECIDS"
           TOTAL=${#STOCK_LIST[@]}
-          echo "📈 本批次共 $TOTAL 只股票"
+          echo "📈 本批次共 $TOTAL 只"
           
           SUCCESS=0
           FAIL=0
@@ -98,7 +98,7 @@ jobs:
             NUM=$((i + 1))
             echo ""
             echo "============================================"
-            echo "[$NUM/$TOTAL] 处理股票: $SECID"
+            echo "[$NUM/$TOTAL] 处理: $SECID"
             echo "============================================"
             
             if scripts2/workflow-raw.sh "$SECID" "$FROM_DATE" "$TO_DATE"; then
