--- a/.github/workflows/upload_drive.yml
+++ b/.github/workflows/upload_drive.yml
@@ -33,13 +33,8 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-
-      - name: 'Get Access Token'
-        id: token
-        run: |
-          ACCESS_TOKEN=$(gcloud auth print-access-token)
-          echo "::add-mask::$ACCESS_TOKEN"
-          echo "access_token=$ACCESS_TOKEN" >> "$GITHUB_OUTPUT"
+          token_format: 'access_token'
+          access_token_scopes: 'https://www.googleapis.com/auth/drive'
 
       - name: 'Install Rclone'
         run: |
@@ -53,7 +48,7 @@ jobs:
           [gdrive]
           type = drive
           scope = drive
-          token = {"access_token":"${{ steps.token.outputs.access_token }}","token_type":"Bearer","expiry":"2099-01-01T00:00:00Z"}
+          token = {"access_token":"${{ steps.auth.outputs.access_token }}","token_type":"Bearer","expiry":"2099-01-01T00:00:00Z"}
           root_folder_id = ${{ secrets.GDRIVE_FOLDER_ID }}
           EOF
 
