--- a/.github/workflows/download-drive.yml
+++ b/.github/workflows/download-drive.yml
@@ -1,29 +1,43 @@
 name: 下载历史数据并上传 Google Drive
 
 on:
+#   schedule:
+#     # 每小时整点执行，UTC 0-21 点 = 22 个 batch，22 小时完成全量
+#     - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
       stocks:
-        description: '股票列表（逗号分隔，如: sz300682,sh600267）'
-        required: true
+        description: '股票列表（逗号分隔，如 sz300682,sh600267）。留空则自动按 batch 分页处理全市场'
+        required: false
         type: string
       year:
-        description: '年份（如: 2025）'
-        required: true
+        description: '年份（默认 2025）'
+        required: false
         type: string
+        default: '2025'
+      batch_number:
+        description: '全量模式的批次号（0-21）。留空则自动按 UTC 小时计算'
+        required: false
+        type: string
+      batch_size:
+        description: '每批股票数量（默认 256，上限 256）'
+        required: false
+        type: string
+        default: '256'
 
 env:
   TZ: Asia/Shanghai
 
 jobs:
   # ============================================================
-  # 第一步：生成分片矩阵 (secid × month)
+  # 第一步：生成分片矩阵
   # ============================================================
   prepare:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.gen.outputs.matrix }}
       year: ${{ steps.gen.outputs.year }}
+      mode: ${{ steps.gen.outputs.mode }}
       should_run: ${{ steps.gen.outputs.should_run }}
     steps:
       - name: 检出 stock-grabber 代码
@@ -35,12 +49,25 @@ jobs:
       - name: 生成分片矩阵
         id: gen
         run: |
-          python3 scripts2/prepare-matrix-manual.py \
-            stocks="${{ github.event.inputs.stocks }}" \
-            year="${{ github.event.inputs.year }}"
+          ARGS="year=${{ github.event.inputs.year || '2025' }}"
+
+          if [ -n "${{ github.event.inputs.stocks }}" ]; then
+            ARGS="$ARGS stocks=${{ github.event.inputs.stocks }}"
+          fi
+
+          if [ -n "${{ github.event.inputs.batch_number }}" ]; then
+            ARGS="$ARGS batch_number=${{ github.event.inputs.batch_number }}"
+          fi
+
+          if [ -n "${{ github.event.inputs.batch_size }}" ]; then
+            ARGS="$ARGS batch_size=${{ github.event.inputs.batch_size }}"
+          fi
+
+          echo "参数: $ARGS"
+          python3 scripts2/prepare-matrix-manual.py $ARGS
 
   # ============================================================
-  # 第二步：并行下载（每个 job = 一只股票的一个月数据）
+  # 第二步：并行下载 + 打包 + 上传 Google Drive
   # ============================================================
   download:
     needs: prepare
@@ -48,51 +75,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 10
+      max-parallel: 20
       matrix: ${{ fromJson(needs.prepare.outputs.matrix) }}
 
     steps:
       - name: 打印任务信息
         run: |
           echo "📈 股票: ${{ matrix.secid }}"
-          echo "📅 月份: ${{ needs.prepare.outputs.year }}-${{ matrix.month }}"
           echo "📅 范围: ${{ matrix.from_date }} ~ ${{ matrix.to_date }}"
+          echo "📅 年份: ${{ needs.prepare.outputs.year }}"
+          echo "🔧 模式: ${{ needs.prepare.outputs.mode }}"
 
-      - name: 检出 stock-grabber 代码
-        uses: actions/checkout@v4
-        with:
-          repository: hiyishui/stock-grabber
-          token: ${{ secrets.GRABBER_PAT }}
-
-      - name: 设置 Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: 下载数据
-        run: |
-          python3 scripts2/fetch-upload-drive.py \
-            secid=${{ matrix.secid }} \
-            from=${{ matrix.from_date }} \
-            to=${{ matrix.to_date }} \
-            output_dir=./output
-
-      - name: 上传 artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: data-${{ matrix.secid }}-${{ matrix.month }}
-          path: output/${{ matrix.secid }}/
-          retention-days: 1
-
-  # ============================================================
-  # 第三步：汇总打包并上传 Google Drive
-  # ============================================================
-  upload:
-    needs: [prepare, download]
-    if: needs.prepare.outputs.should_run == 'true'
-    runs-on: ubuntu-latest
-
-    steps:
       - name: 检出 stock-grabber 代码
         uses: actions/checkout@v4
         with:
@@ -107,13 +100,7 @@ jobs:
       - name: 安装依赖
         run: pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib
 
-      - name: 下载所有 artifact
-        uses: actions/download-artifact@v4
-        with:
-          path: ./artifacts
-          pattern: data-*
-
-      - name: 整理目录结构并打包上传
+      - name: 下载数据 + 打包 + 上传
         env:
           GDRIVE_CLIENT_ID: ${{ secrets.GDRIVE_CLIENT_ID }}
           GDRIVE_CLIENT_SECRET: ${{ secrets.GDRIVE_CLIENT_SECRET }}
@@ -121,44 +108,7 @@ jobs:
           GDRIVE_FOLDER_ID: ${{ secrets.GDRIVE_FOLDER_ID }}
           UPLOAD_DRIVE: 'true'
         run: |
-          YEAR="${{ needs.prepare.outputs.year }}"
-          STOCKS="${{ github.event.inputs.stocks }}"
-
-          echo "📁 整理 artifact 目录..."
-          ls -la ./artifacts/
-
-          # 将 artifacts/data-{secid}-{month}/{year}/{month}/ 合并到 output/{secid}/{year}/{month}/
-          mkdir -p ./output
-          for dir in ./artifacts/data-*/; do
-            # 从目录名提取 secid: data-sz300682-01 → sz300682
-            dirname=$(basename "$dir")
-            secid=$(echo "$dirname" | sed 's/^data-//' | sed 's/-[0-9]*$//')
-            
-            echo "  📂 合并: $dirname → output/$secid/"
-            mkdir -p "./output/$secid"
-            cp -r "$dir"* "./output/$secid/" 2>/dev/null || true
-          done
-
-          echo ""
-          echo "📁 合并后目录结构:"
-          find ./output -type f | head -20
-          echo "..."
-
-          # 按股票逐个打包并上传
-          IFS=',' read -ra STOCK_LIST <<< "$STOCKS"
-          for SECID in "${STOCK_LIST[@]}"; do
-            SECID=$(echo "$SECID" | xargs)
-            echo ""
-            echo "============================================"
-            echo "📦 打包并上传: $SECID ($YEAR)"
-            echo "============================================"
-            
-            python3 scripts2/fetch-upload-drive.py \
-              secid="$SECID" \
-              from="${YEAR}0101" \
-              to="${YEAR}1231" \
-              output_dir=./output
-          done
-
-          echo ""
-          echo "🎉 全部完成！"
+          python3 scripts2/fetch-upload-drive.py \
+            secid=${{ matrix.secid }} \
+            from=${{ matrix.from_date }} \
+            to=${{ matrix.to_date }}
