--- a/.github/workflows/check-missing.yml
+++ b/.github/workflows/check-missing.yml
@@ -68,9 +68,63 @@ jobs:
           TODAY_DATE: ${{ needs.today-prepare.outputs.today }}
         run: python3 scripts2/fix-missing-dates.py
 
-  # ── check 模式：检查缺失日期 ──
-  check:
+  # ── check 模式：检查缺失日期（分片并发） ──
+  check-prepare:
     if: inputs.mode == 'errors' || inputs.mode == 'all'
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.matrix.outputs.should_run }}
+      matrix: ${{ steps.matrix.outputs.matrix }}
+    steps:
+      - name: 检出 stock-grabber
+        uses: actions/checkout@v4
+        with:
+          repository: hiyishui/stock-grabber
+          token: ${{ secrets.GRABBER_PAT }}
+
+      - name: 生成 check 分片矩阵
+        id: matrix
+        env:
+          CHECK_MODE: ${{ inputs.mode }}
+          CHECK_PERIOD: ${{ inputs.period }}
+        run: python3 scripts2/prepare-check-matrix.py
+
+  check-shard:
+    if: (inputs.mode == 'errors' || inputs.mode == 'all') && needs.check-prepare.outputs.should_run == 'true'
+    needs: check-prepare
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      max-parallel: 40
+      matrix: ${{ fromJson(needs.check-prepare.outputs.matrix) }}
+    steps:
+      - name: 检出 stock-grabber
+        uses: actions/checkout@v4
+        with:
+          repository: hiyishui/stock-grabber
+          token: ${{ secrets.GRABBER_PAT }}
+
+      - name: 检查分片 ${{ matrix.shard }} (${{ matrix.count }}只)
+        env:
+          REPO_OWNER: ${{ secrets.TARGET_REPO_OWNER }}
+          REPO_TOKEN: ${{ secrets.TARGET_REPO_TOKEN }}
+          SECIDS: ${{ matrix.secids }}
+          SHARD_ID: ${{ matrix.shard }}
+          CHECK_PERIOD: ${{ inputs.period }}
+          CHECK_WORKERS: '10'
+        run: python3 scripts2/check-missing-dates.py
+
+      - name: 上传分片结果
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: check-result-${{ matrix.shard }}
+          path: data/check_results/shard_${{ matrix.shard }}.json
+          retention-days: 1
+
+  check-merge:
+    if: (inputs.mode == 'errors' || inputs.mode == 'all') && needs.check-prepare.outputs.should_run == 'true'
+    needs: [check-prepare, check-shard]
     runs-on: ubuntu-latest
     steps:
       - name: 检出 stock-grabber
@@ -79,13 +133,18 @@ jobs:
           repository: hiyishui/stock-grabber
           token: ${{ secrets.GRABBER_PAT }}
 
-      - name: 检查缺失日期
+      - name: 下载所有分片结果
+        uses: actions/download-artifact@v4
+        with:
+          pattern: check-result-*
+          path: data/check_results
+          merge-multiple: true
+
+      - name: 汇总检查结果
         env:
-          REPO_OWNER: ${{ secrets.TARGET_REPO_OWNER }}
-          REPO_TOKEN: ${{ secrets.TARGET_REPO_TOKEN }}
-          CHECK_MODE: ${{ inputs.mode }}
           CHECK_PERIOD: ${{ inputs.period }}
-        run: python3 scripts2/check-missing-dates.py
+          CHECK_MODE: ${{ inputs.mode }}
+        run: python3 scripts2/merge-check-results.py
 
       - name: 提交结果
         env:
